Add LRU cache to speed up multiple requests to the same thing

--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,9 @@
     {ibrowse, "4.0.1", {git, "https://github.com/cmullaparthi/ibrowse.git",
                         {tag, "v4.0.1"}}},
     {cowboy, "0.7.0", {git, "https://github.com/extend/cowboy.git",
-                       "855e9652fa40673d8f1ff40fd262963941e28fef"}}
+                       "855e9652fa40673d8f1ff40fd262963941e28fef"}},
+    {cadfaerl, "1.0", {git, "https://github.com/ddossot/cadfaerl.git",
+                       "2be603d0aa7aca9a42e61534807c996c3cbd7be2"}}
    ]}.
 {erl_opts, [debug_info,
             {parse_transform, lager_transform}
