--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -11,6 +11,11 @@
  {lager, [
           {crash_log, "log/crash.log"}
           %% , {error_logger_redirect, false}
-         ]}
+         ]},
+
+ {ibrowse, [
+            {default_max_sessions, 1000},
+            {default_max_pipeline_size, 1000}
+           ]}
 ].
 
