closes #5: send requests out on their incoming IP

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -10,7 +10,9 @@
 
  {lager, [
           {crash_log, "log/crash.log"}
+          %% Uncomment for debugging:
           %% , {error_logger_redirect, false}
+          %% , {handlers, [{lager_console_backend, debug}]}
          ]},
 
  {ibrowse, [
