Add cache key config, custom cookie parsing

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -1,4 +1,19 @@
 [
+ {qdecp, [
+          {cache, [
+    %% List of things to be concatenated together to form the cache key for each request
+    %% [method
+    %%  | url
+    %%  | {cookie, CookieName :: string()}
+    %%  | {sub_cookie, CookieName, SubCookieName, Divider}]
+    %% Divider is the character used to separate sub-cookies, like $: or $&
+                   {key_parts, [method, url]},
+                   %% For example, adding the Google Locale cookie:
+                   %% {key_parts, [method, url, {sub_cookie, "PREF", "L", $:}]},
+                   {modules, [qdecp_cache_memlocal]}
+                  ]}
+         ]},
+
  %% SASL config
  {sasl, [
          {sasl_error_logger, {file, "log/sasl-error.log"}},
