initial riak cache

--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,9 @@
     {cowboy, "0.7.0", {git, "https://github.com/extend/cowboy.git",
                        "855e9652fa40673d8f1ff40fd262963941e28fef"}},
     {cadfaerl, "1.0", {git, "https://github.com/ddossot/cadfaerl.git",
-                       "2be603d0aa7aca9a42e61534807c996c3cbd7be2"}}
+                       "2be603d0aa7aca9a42e61534807c996c3cbd7be2"}},
+    {riakc, "1", {git, "https://github.com/ixmatus/riak-erlang-client.git",
+                      "2239288b5a7d70242f3366d8f6099c1cab7afa28"}}
    ]}.
 {erl_opts, [debug_info,
             {parse_transform, lager_transform}
