--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -10,8 +10,15 @@
                    {key_parts, [method, url]},
                    %% For example, adding the Google Locale cookie:
                    %% {key_parts, [method, url, {sub_cookie, "PREF", "L", $:}]},
-                   {modules, [qdecp_cache_memlocal]}
+                   {modules, [qdecp_cache_memlocal]},
+                   {riak, [{bucket, <<"qdecp_cache">>}]}
                   ]}
+         ]},
+
+ {riakc, [{connections, [
+                         %% {Name, SizeArgs, WorkerArgs}
+                         {riakc, [{size, 10}], [{"127.0.0.1", 8087}]}
+                        ]}
          ]},
 
  %% SASL config
