Switch to more recent riakc and custom poolboy setup

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -10,15 +10,18 @@
                    {key_parts, [method, url]},
                    %% For example, adding the Google Locale cookie:
                    %% {key_parts, [method, url, {sub_cookie, "PREF", "L", $:}]},
-                   {modules, [qdecp_cache_memlocal]},
-                   {riak, [{bucket, <<"qdecp_cache">>}]}
-                  ]}
-         ]},
+                   {modules, [
+                              qdecp_cache_memlocal
+                              %% , qdecp_cache_riak
+                             ]},
 
- {riakc, [{connections, [
-                         %% {Name, SizeArgs, WorkerArgs}
-                         {riakc, [{size, 10}], [{"127.0.0.1", 8087}]}
-                        ]}
+                   {riak, [
+                           {connections, [
+                                          %% {Name, SizeArgs, WorkerArgs}
+                                          {riakc, [{size, 10}], [{"127.0.0.1", 8087}]}
+                                         ]}
+                          ]}
+                  ]}
          ]},
 
  %% SASL config
