--- a/rebar.config
+++ b/rebar.config
@@ -7,8 +7,10 @@
                        "855e9652fa40673d8f1ff40fd262963941e28fef"}},
     {cadfaerl, "1.0", {git, "https://github.com/ddossot/cadfaerl.git",
                        "2be603d0aa7aca9a42e61534807c996c3cbd7be2"}},
-    {riakc, "1", {git, "https://github.com/ixmatus/riak-erlang-client.git",
-                      "2239288b5a7d70242f3366d8f6099c1cab7afa28"}}
+    {riakc, "1.3.1", {git, "https://github.com/basho/riak-erlang-client.git",
+                    "984444a4c2ff8e3b03683f1596ee4b5d1ea0cafb"}},
+    {poolboy, "0.9.1", {git, "https://github.com/devinus/poolboy.git",
+                        "2a035135dc3e1e2aeb0f69365171fc9e9a2e82df"}}
    ]}.
 {erl_opts, [debug_info,
             {parse_transform, lager_transform}
