Working poolboy-based riak client pool cache

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -16,10 +16,8 @@
                              ]},
 
                    {riak, [
-                           {connections, [
-                                          %% {Name, SizeArgs, WorkerArgs}
-                                          {riakc, [{size, 10}], [{"127.0.0.1", 8087}]}
-                                         ]}
+                           {server, {"127.0.0.1", 8087}},
+                           {pool_size, 10}
                           ]}
                   ]}
          ]},
