--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -11,6 +11,7 @@
          ibrowse,
          ranch,
          cowboy,
+         riakc,
          qdecp
         ]},
        {rel, "start_clean", "",
