--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -27,7 +27,8 @@
        {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
                            "^erts.*/(doc|info|include|lib|man|src)"]},
        {excl_app_filters, ["\.gitignore"]},
-       {app, qdecp, [{mod_cond, app}, {incl_cond, include}, {lib_dir, ".."}]}
+       {app, qdecp, [{mod_cond, app}, {incl_cond, include}, {lib_dir, ".."}]},
+       {app, hipe, [{incl_cond, exclude}]}
       ]}.
 
 {target_dir, "qdecp"}.
