Working mnesia cache module

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -13,6 +13,7 @@
                    {modules, [
                               qdecp_cache_memlocal
                               %% , qdecp_cache_riak
+                              %% , qdecp_cache_mnesia
                              ]},
 
                    {riak, [
