--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -12,6 +12,7 @@
          ranch,
          cowboy,
          riakc,
+         mnesia,
          qdecp
         ]},
        {rel, "start_clean", "",
