Allow for proper initialization and read/write of fragmented table, add example mnesia config

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -16,10 +16,20 @@
                               %% , qdecp_cache_mnesia
                              ]},
 
+                   %% Example riak cache config
                    {riak, [
                            {server, {"127.0.0.1", 8087}},
                            {pool_size, 10}
-                          ]}
+                          ]},
+
+                   %% Example mnesia cache config, distrivuting
+                   %% between 3 nodes in cluster with 2 disc-only
+                   %% copies of each of 32 fragments
+                   {mnesia, [
+                             {nodes, ['qdecp@127.0.0.1', 'b@127.0.0.1', 'c@127.0.0.1']},
+                             {fragments, 32},
+                             {disc_only_copies, 2}
+                            ]}
                   ]}
          ]},
 
