make sure poolboy gets in release

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -13,6 +13,7 @@
          cowboy,
          riakc,
          mnesia,
+         poolboy,
          qdecp
         ]},
        {rel, "start_clean", "",
