Use my copy of ibrowse with no default proxy settings

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {deps, [
     {lager, "1.2.2", {git, "https://github.com/basho/lager.git",
                       {tag, "1.2.2"}}},
-    {ibrowse, "4.0.1", {git, "https://github.com/cmullaparthi/ibrowse.git",
-                        {tag, "v4.0.1"}}},
+    {ibrowse, "4.0.1", {git, "https://github.com/pib/ibrowse.git",
+                        {branch, "HEAD"}}},
     {cowboy, "0.7.0", {git, "https://github.com/extend/cowboy.git",
                        "855e9652fa40673d8f1ff40fd262963941e28fef"}},
     {cadfaerl, "1.0", {git, "https://github.com/ddossot/cadfaerl.git",
