Switch to my fork of cowboy for proper CONNECT handling

--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,8 @@
                       {tag, "1.2.2"}}},
     {ibrowse, "4.0.1", {git, "https://github.com/pib/ibrowse.git",
                         {branch, "HEAD"}}},
-    {cowboy, "0.7.0", {git, "https://github.com/extend/cowboy.git",
-                       "855e9652fa40673d8f1ff40fd262963941e28fef"}},
+    {cowboy, "0.8.1", {git, "https://github.com/pib/cowboy.git",
+                       {branch, "HEAD"}}},
     {cadfaerl, "1.0", {git, "https://github.com/ddossot/cadfaerl.git",
                        "2be603d0aa7aca9a42e61534807c996c3cbd7be2"}},
     {riakc, "1.3.1", {git, "https://github.com/basho/riak-erlang-client.git",
