--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -26,9 +26,10 @@
                    %% between 3 nodes in cluster with 2 disc-only
                    %% copies of each of 32 fragments
                    {mnesia, [
-                             {nodes, ['qdecp@127.0.0.1', 'b@127.0.0.1', 'c@127.0.0.1']},
-                             {fragments, 32},
-                             {disc_only_copies, 2}
+                             %%{nodes, ['qdecp@127.0.0.1', 'b@127.0.0.1', 'c@127.0.0.1']},
+                             {nodes, ['qdecp@127.0.0.1']},
+                             {fragments, 8},
+                             {disc_only_copies, 1}
                             ]}
                   ]}
          ]},
