Switch to lhttpc by default, make http client configurable

--- a/rebar.config
+++ b/rebar.config
@@ -1,17 +1,17 @@
 {deps, [
-    {lager, "1.2.2", {git, "https://github.com/basho/lager.git",
-                      {tag, "1.2.2"}}},
-    {ibrowse, "4.0.1", {git, "https://github.com/pib/ibrowse.git",
-                        {branch, "HEAD"}}},
-    {cowboy, "0.8.1", {git, "https://github.com/pib/cowboy.git",
-                       {branch, "HEAD"}}},
-    {cadfaerl, "1.0", {git, "https://github.com/ddossot/cadfaerl.git",
-                       "2be603d0aa7aca9a42e61534807c996c3cbd7be2"}},
-    {riakc, "1.3.1", {git, "https://github.com/basho/riak-erlang-client.git",
-                    "984444a4c2ff8e3b03683f1596ee4b5d1ea0cafb"}},
-    {poolboy, "0.9.1", {git, "https://github.com/devinus/poolboy.git",
-                        "2a035135dc3e1e2aeb0f69365171fc9e9a2e82df"}}
-   ]}.
+        {lager, "1.2.2", {git, "https://github.com/basho/lager.git",
+                          {tag, "1.2.2"}}},
+        {lhttpc, "1.2.6", {git, "https://github.com/esl/lhttpc.git",
+                           {branch, "HEAD"}}},
+        {cowboy, "0.8.1", {git, "https://github.com/pib/cowboy.git",
+                           {branch, "HEAD"}}},
+        {cadfaerl, "1.0", {git, "https://github.com/ddossot/cadfaerl.git",
+                           "2be603d0aa7aca9a42e61534807c996c3cbd7be2"}},
+        {riakc, "1.3.1", {git, "https://github.com/basho/riak-erlang-client.git",
+                          "984444a4c2ff8e3b03683f1596ee4b5d1ea0cafb"}},
+        {poolboy, "0.9.1", {git, "https://github.com/devinus/poolboy.git",
+                            "2a035135dc3e1e2aeb0f69365171fc9e9a2e82df"}}
+       ]}.
 {erl_opts, [debug_info,
             {parse_transform, lager_transform}
            ]}.
