--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -8,7 +8,7 @@
          stdlib,
          sasl,
          cadfaerl,
-         ibrowse,
+         lhttpc,
          ranch,
          cowboy,
          riakc,
