100 per outgoing IP

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -50,9 +50,8 @@
           %% , {handlers, [{lager_console_backend, debug}]}
          ]},
 
- {ibrowse, [
-            {default_max_sessions, 100},
-            {default_max_pipeline_size, 100}
+ {lhttpc, [
+            {pool_size, 100}
            ]}
 ].
 
