process stats more often

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -1,5 +1,6 @@
 [
  {qdecp, [
+          {stats, [{process_every, 5000}]},
           {cache, [
     %% List of things to be concatenated together to form the cache key for each request
     %% [method
@@ -13,7 +14,7 @@
                    {modules, [
                               qdecp_cache_memlocal
                               %% , qdecp_cache_riak
-                              %% , qdecp_cache_mnesia
+                              , qdecp_cache_mnesia
                              ]},
 
                    %% Example riak cache config
